# oscar

./: .dockerignore  .gitignore  CONTRIBUTING.md  Containerfile  LICENSE  Makefile  README.md  doc.go  docker-compose.yaml  embed.go  go.mod  go.sum  main.go  mise.toml  oscar.yaml
.github/workflows/: checkout.yaml  main.yaml
cmd/oscar/: main.go
internal/ci/: ci.go  ci_config.go  common.go  config.go  doc.go  git.go  go.go  python.go  run.go  shell.go
internal/ci/configfiles/: .markdownlint-cli2.yaml  embed.go  pyproject.toml  revive.toml  staticcheck.conf
internal/ci/go/: doc.go  go.go  tasks.go  versions.go
internal/ci/markdown/: doc.go  tasks.go  versions.go
internal/ci/nodejs/: doc.go  tasks.go  versions.go
internal/ci/python/: doc.go  python.go  tasks.go  versions.go
internal/ci/shell/: doc.go  shell.go  tasks.go  versions.go
internal/ci/util/: doc.go  hostinfo.go  types.go  util.go
internal/cli/: doc.go  root.go
internal/consts/: consts.go
internal/git/: ci.go  deliver.go  doc.go  git.go  git_test.go
internal/hostinfo/: doc.go  hostinfo.go
internal/oscarcfg/: config.go  config_test.go  doc.go  test.oscar.yaml
internal/print/: colors.go  doc.go  print.go
internal/semver/: doc.go  semver.go  semver_test.go
internal/system/: doc.go  system.go
internal/tasks/ci/: run.go
internal/tasks/delivery/: doc.go  run.go
internal/tasks/util/: core_types.go  doc.go  repo.go  (+4 more)
internal/tools/: doc.go  types.go  util.go
proto/: buf.gen.yaml  buf.yaml  generate.go
scripts/: test-bootstrap.sh  test-handler.sh  xbuild.sh
testdata/: README.md
(+51 files in other folders)
